[gd_scene load_steps=14 format=3 uid="uid://b5ws0ev1478r"]

[ext_resource type="Script" path="res://scripts/Pause_Menu.gd" id="1_opglt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_etv05"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bs20x"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hkur6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4nyua"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oq7ed"]

[sub_resource type="Theme" id="Theme_po2a5"]
Button/colors/font_focus_color = Color(1, 1, 0.054902, 1)
Button/colors/font_hover_color = Color(1, 1, 0.054902, 1)
Button/colors/font_hover_pressed_color = Color(1, 1, 0.054902, 1)
Button/colors/font_pressed_color = Color(0.984314, 0.337255, 0.0313726, 0.972549)
Button/font_sizes/font_size = 26
Button/styles/disabled = SubResource("StyleBoxFlat_etv05")
Button/styles/focus = SubResource("StyleBoxEmpty_bs20x")
Button/styles/hover = SubResource("StyleBoxEmpty_hkur6")
Button/styles/normal = SubResource("StyleBoxEmpty_4nyua")
Button/styles/pressed = SubResource("StyleBoxEmpty_oq7ed")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vbuow"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qj5ho"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ivdvk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c2hom"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vexbf"]

[sub_resource type="Theme" id="Theme_l4rtm"]
Button/colors/font_focus_color = Color(1, 1, 0.054902, 1)
Button/colors/font_hover_color = Color(1, 1, 0.054902, 1)
Button/colors/font_hover_pressed_color = Color(1, 1, 0.054902, 1)
Button/colors/font_pressed_color = Color(0.984314, 0.337255, 0.0313726, 0.972549)
Button/font_sizes/font_size = 26
Button/styles/disabled = SubResource("StyleBoxFlat_vbuow")
Button/styles/focus = SubResource("StyleBoxEmpty_qj5ho")
Button/styles/hover = SubResource("StyleBoxEmpty_ivdvk")
Button/styles/normal = SubResource("StyleBoxEmpty_c2hom")
Button/styles/pressed = SubResource("StyleBoxEmpty_vexbf")

[node name="Pause_Menu" type="CanvasLayer"]
script = ExtResource("1_opglt")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0627451, 0.0627451, 0.0627451, 0.572549)

[node name="Menu" type="VBoxContainer" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -33.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="continue_btn" type="Button" parent="Menu"]
process_mode = 3
texture_filter = 1
layout_mode = 2
theme = SubResource("Theme_po2a5")
text = "CONTINUAR
"

[node name="get_out_btn" type="Button" parent="Menu"]
process_mode = 3
layout_mode = 2
theme = SubResource("Theme_l4rtm")
text = "
SAIR   
"

[connection signal="pressed" from="Menu/continue_btn" to="." method="_on_continue_btn_pressed"]
[connection signal="pressed" from="Menu/get_out_btn" to="." method="_on_get_out_btn_pressed"]
